--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,7 @@ body > * {
   position: relative;  /* Make sure the direct children are positioned relatively */
   z-index: 1;  /* Ensure they are above the pseudo-element */
 }
+
+.hello {
+  display: flex;
+}
