--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 body {
   height: 100vh;
-  background-image: url("./../../public/dogLogo.png");
+  background-image: url("./../../public/kiwi_logo.jpg");
   background-size: 80px;
   position: relative;
 }
